# nano-kor

./: .gitignore  pyproject.toml
config/: train_gpt2.py
data/korcomment/: prepare.py
data/namuwiki/: prepare.py
data/openwebtext/: prepare.py
nanogpt/: bigram.py  model.py  train.py
nanogpt/poc/: bigram.py
src/nanogpt/: __init__.py
task/: train.json
