[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "seonglae", email = "sungle3737@gmail.com" }
]
dependencies = [
    "tiktoken>=0.6.0",
    "matplotlib>=3.7.5",
    "numpy<1.25.0",
    "pandas<1.6",
    "tqdm>=4.66.2",
    "requests>=2.31.0",
    "torch>=2.1.2",
    "transformers>=4.38.1",
    "wandb>=0.16.3",
    "datasets>=2.16.1"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ['E721', 'E741', 'E731']

[tool.rye]
managed = true
dev-dependencies = [
    "autopep8>=2.0.4",
    "pip>=24.0",
    "setuptools>=69.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nanogpt"]

[[tool.rye.sources]]
name = "cuda"
url = "https://download.pytorch.org/whl/cu118"
type = "index"
